<resources>
    <string name="app_name">Movie Time</string>
    <string name="title_activity_detail">Details</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_settings">Setting</string>
    <string name="title_activity_collection">Collection</string>
    <string name="pref_popular">popular</string>
    <string name="pref_top_rated">top_rated</string>

    <string name="pref_label">Setting</string>
    <string name="pref_popular_name">Ordering by popular</string>
    <string name="pref_top_rated_name">Ordering by top rate</string>
    <string name="pref_key">Ordering</string>
    <string name="action_settings">Setting bar</string>
    <string name="pref_collection">collection</string>
    <string name="pref_movieId">movie_id</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="sync_account_type">movie.example.com</string>
    <string name="content_authority">com.example.android.moiveapp</string>
    <string name="collection">Collection List</string>
    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Movie Change Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_synchronizing_frequency">Synchronizing Frequency</string>
    <string name="pref_frequency_key">frequency</string>
    <string name="pref_frequency_default" translatable="false">86400</string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
</resources>
